Fix text animation on mobile

--- a/src/client/pages/home-page/components/SectionElement/styles.module.scss
+++ b/src/client/pages/home-page/components/SectionElement/styles.module.scss
@@ -10,7 +10,7 @@
   position: fixed;
   padding-top: 250px;
   top: 0;
-  transition: transform 0.8s, opacity 0.8s;
+  transition: transform 0.8s, opacity 0.4s;
   transform: translateY(100%);
   opacity: 0;
 
